--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,12 @@ spring:
     url: jdbc:h2:./db
     username:
     password:
+    driverClassName: org.h2.Driver
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 
 
 
