--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -8,19 +8,31 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
+#    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:./db
     username:
     password:
-    driverClassName: org.h2.Driver
+#    driverClassName: org.h2.Driver
+#  jpa:
+#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
   jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+
+
+
 
   h2:
     console:
       enabled: true
       path: /h2console/
-      settings.trace: false
-      settings.web-allow-others: false
+#      settings.trace: false
+#      settings.web-allow-others: false
+      settings:
+        web-allow-others: true
 
 logging:
   level:
