--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -8,8 +8,8 @@ server:
 
 spring:
   datasource:
-#    url: jdbc:h2:mem:mydb
-    url: jdbc:h2:./db
+    url: jdbc:h2:mem:mydb
+#    url: jdbc:h2:./db
     username:
     password:
 #    driverClassName: org.h2.Driver
@@ -19,9 +19,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
-#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-
-
+#    database-platform: org.hibernate.dialect.H2Dialect
 
 
 
