--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -8,8 +8,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
-#    url: jdbc:h2:./db
+#    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:./db
     username:
     password:
 #    driverClassName: org.h2.Driver
