--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -15,8 +15,14 @@ spring:
     password: ${PGPASSWORD}
 #    name: spring-blog
 
+#  jpa:
+#    show-sql: false
+#
+
   jpa:
-    show-sql: false
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 
 logging:
   level:
