--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -13,16 +13,20 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+
+    liquibase:
+      enabled: false
+
 #    name: spring-blog
 
-#  jpa:
-#    show-sql: false
-#
-
   jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+    show-sql: false
+
+
+#  jpa:
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
 
 logging:
   level:
