--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -3,22 +3,56 @@ server:
 
 base-url: /api
 
-spring:
-  application:
-    name: app
+#spring:
+#  application:
+#    name: app
 
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
+
+
+
+
+
+spring:
+  datasource:
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
+    class-driver: org.postgresql.Driver
+
+
+#    url: jdbc:h2:./db
+#    username:
+#    password:
+#    driverClassName: org.h2.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+
+
+
+
+
+
+
+
+
+
+
 
   mvc:
     hiddenmethod:
       filter:
         enabled: true
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
+#  jpa:
+#    hibernate:
+#      ddl-auto: create-drop
 
 springdoc:
   swagger-ui:
