--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,5 +1,5 @@
-server:
-  port: ${PORT:5000}
+#server:
+#  port: ${PORT:5000}
 
 base-url: /api
 
@@ -7,9 +7,7 @@ base-url: /api
 #  application:
 #    name: app
 
-  liquibase:
-    enabled: true
-    change-log: classpath:db/changelog/changelog-master.xml
+
 
 
 
@@ -21,6 +19,11 @@ spring:
     username: ${PGUSER}
     password: ${PGPASSWORD}
     class-driver: org.postgresql.Driver
+
+
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/changelog-master.xml
 
 
 #    url: jdbc:h2:./db
