--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -33,7 +33,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 #    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 
 
