--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,34 @@ dependencies {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
 
 test {
   useJUnitPlatform()
@@ -90,19 +117,45 @@ diffChangeLog {
   dependsOn compileJava
 }
 
+//liquibase {
+//  activities {
+//    main {
+//      changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
+//      url 'jdbc:h2:./db'
+//      username ''
+//      password ''
+//      referenceUrl 'hibernate:spring:hexlet.code.model' +
+//                   '?dialect=org.hibernate.dialect.H2Dialect' +
+//                   '&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
+//    }
+//  }
+//}
+
 liquibase {
   activities {
     main {
       changeLogFile 'src/main/resources/db/changelog/changelog-master.xml'
-      url 'jdbc:h2:./db'
-      username ''
-      password ''
+      url 'jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}'
+//      url 'jdbc:h2:./db'
+      username '${PGUSER}'
+      password '${PGPASSWORD}'
+
+//      username ''
+//      password ''
       referenceUrl 'hibernate:spring:hexlet.code.model' +
-                   '?dialect=org.hibernate.dialect.H2Dialect' +
-                   '&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy'
+              '?dialect=org.hibernate.dialect.PostgreSQL10Dialect' +
+              '&hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy' +
+              '&hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy'
+
+
+
+
+
     }
   }
 }
+
+
 
 task stage(dependsOn: [clean, installDist])
 installDist.mustRunAfter clean
