--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -10,13 +10,22 @@ spring:
       enabled: false
 
   datasource:
-    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
-    username: ${PROD_DB_USERNAME}
-    password: ${PROD_DB_PASSWORD}
-    name: spring-blog
+    url: ${DB_URL}
+#    url: jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+#    name: spring-blog
 
   jpa:
     show-sql: false
+
+
+
+
+#  liquibase:
+#    enabled: false
+
+
 
 logging:
   level:
