--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   runtimeOnly 'com.h2database:h2:1.4.200'
+  runtimeOnly 'org.postgresql:postgresql:42.2.24'
 
 //  implementation 'org.springframework.security:spring-security-core:6.0.2'
 
