--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'application'
   id 'checkstyle'
+  id 'jacoco'
   id 'com.adarshr.test-logger' version '3.0.0'
   id 'org.liquibase.gradle' version '2.0.4'
 
@@ -71,13 +72,19 @@ dependencies {
   liquibaseRuntime 'org.springframework.boot:spring-boot-starter-data-jpa'
   liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.6'
   liquibaseRuntime sourceSets.main.output
-
-
-
-
-
-
 }
+
+
+jacocoTestReport {
+  reports {
+    xml.required = true
+  }
+}
+
+checkstyle {
+  toolVersion '10.0'
+}
+
 
 test {
   useJUnitPlatform()
