--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -3,6 +3,8 @@ base-url: "/api"
 spring:
   application:
     name: taskManager
+    profiles:
+      active: ${APP_ENV:dev}
 
   jpa:
     show-sql: true
